Add HBPS parser

--- a/src/dr/app/beast/release_parsers.properties
+++ b/src/dr/app/beast/release_parsers.properties
@@ -626,7 +626,9 @@ dr.inferencexml.operators.hmc.ReflectiveHamiltonianMonteCarloOperatorParser
 dr.inferencexml.operators.hmc.TransformedMultivariateHamiltonianMonteCarloOperatorParser
 dr.inferencexml.operators.hmc.SplitHamiltonianMonteCarloOperatorParser
 dr.inferencexml.operators.hmc.BouncyParticleOperatorParser
+dr.inferencexml.operators.hmc.HamiltonianBouncyParticleOperatorParser
 dr.inferencexml.operators.hmc.ZigZagOperatorParser
+dr.inferencexml.operators.hmc.ReversibleHamiltonianBouncyParticleOperatorParser
 dr.inferencexml.operators.hmc.NoUTurnOperatorParser
 dr.inferencexml.hmc.GradientWrapperParser
 dr.inferencexml.hmc.HessianWrapperParser
